2824. Count Pairs Whose Sum is Less than Target. Up